--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     "should": "13.2.3",
     "sinon": "9.2.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "long-timeout": "^0.1.1"
+  }
 }
